# ckanext-dashboard

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/dashboard/: config.py  helpers.py  logic.py  models.py  plugin.py
ckanext/dashboard/actions/: dashboard_dataset.py
ckanext/dashboard/assets/: script.js  webassets.yml
ckanext/dashboard/assets/css/: dashboard.css
ckanext/dashboard/auth/: dashboard_dataset.py
ckanext/dashboard/blueprints/: dashboard.py
ckanext/dashboard/i18n/: ckanext-dashboard.pot
ckanext/dashboard/i18n/es/LC_MESSAGES/: ckanext-dashboard.mo  ckanext-dashboard.po
ckanext/dashboard/migration/dashboard/: alembic.ini  env.py
ckanext/dashboard/migration/dashboard/versions/: 43a02b9d1c09_create_dashboard_package_table.py  f156e94e8f68_change_length_urls.py  g_003_56e94e8f69_change_length_urls.py  g_003_f156e94e8f69_change_length_urls.py
ckanext/dashboard/migrations/versions/: 43a02b9d1c09_create_dashboard_package_table.py
ckanext/dashboard/templates/: edit.html  index.html
ckanext/dashboard/templates/admin/: base.html  config.html
ckanext/dashboard/templates/dashboard/: edit.html  form.html  index.html  new.html  show.html  snippet.html
ckanext/dashboard/templates/package/: read.html  read_base.html
ckanext/dashboard/tests/: conftest.py  factories.py  fixtures.py  test_auth_dashboard_show.py  test_dashboard.py  test_dashboard_actions.py  test_plugin.py  test_title.py
docs/: Troubleshooting.md
