[project]
name = "ckanext-dashboard"
version = "0.1.4"
description = "Allow embedding external visualizations from Tableau or PowerBI."
readme = "README.md"
authors = [
    {name = "okfn", email = "info@okfn.com"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "dashboard", "BCIE", "BI", ]
dependencies = []

[project.urls]
Homepage = "https://github.com//ckanext-dashboard"

[project.entry-points."ckan.plugins"]
dashboard = "ckanext.dashboard.plugin:DashboardPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
